Made exercise window hidden on startup to avoid "flicker"

--- a/docs/main.css
+++ b/docs/main.css
@@ -73,3 +73,7 @@ tr:nth-child(even) {
 #dataContainer {
     display: none;
 }
+
+.hidden {
+    display: none;
+}
